--- a/src/CardGrid.css
+++ b/src/CardGrid.css
@@ -52,3 +52,49 @@
   .card:hover img {
     transform: scale(1.1); 
   }
+ /* Responsive Styles */
+
+@media (max-width: 1024px) {
+    .card-grid {
+      grid-template-columns: repeat(4, 1fr); 
+      gap: 10px; 
+      width: 90%; 
+      bottom: -120px; 
+    }
+  
+    .card {
+      height: 80px; 
+    }
+  }
+  
+  
+  @media (max-width: 768px) {
+    .card-grid {
+      grid-template-columns: repeat(3, 1fr); 
+      gap: 10px;
+      width: 80%;
+      bottom: -100px; 
+    }
+  
+    .card {
+      height: 70px; 
+    }
+  }
+  
+
+  @media (max-width: 480px) {
+    .card-grid {
+      grid-template-columns: repeat(2, 1fr); 
+      gap: 8px;
+      width: 90%; 
+      bottom: -80px; 
+    }
+  
+    .card {
+      height: 60px; 
+    }
+  
+    .card:hover {
+      transform: scale(1.1); 
+    }
+  }
